--- a/html/popup.html
+++ b/html/popup.html
@@ -2,6 +2,7 @@
     <head>
         <link rel="stylesheet" type="text/css" href="popup.css">
         <script src="popup.js"></script>
+        <script src="../def_config.js"></script>
     </head>
 
 
