Get ready for web-store deployment (v1.1)
After this, the extension's going public on web-stores (hopefully).

--- a/html/install.html
+++ b/html/install.html
@@ -27,7 +27,8 @@
                 <br>
                 <br>
                 If you possibly step upon an issue, such as an issue with the styling,
-                another YouTube extension, or whatever that comes to this extension,
+                slower performice, something conflicting another YouTube extension,
+                or whatever you think seems off,
                 <a href='https://github.com/ktg5/PlayerTube/issues'>feel free to report them on the GitHub page!</a>
                 <br>
                 <br>
