--- a/html/release-note.html
+++ b/html/release-note.html
@@ -13,18 +13,36 @@
             </div>
 
             <div class="text">
-                <h2 class="showVersion">PlayerTube has been updated to </h2>
-                So, what's new?
-                <li>This is the first version for the PlayerTube extension!</li>
-                <li>Fixed <a href="https://github.com/ktg5/YT-HTML5-Player/issues/23">#23</a>, since all images are local.</li>
-                <li>Fixed styling.</li>
+                <div class="v1dot1">
+                    <h2 class="showVersion">PlayerTube has been updated to </h2>
+                    <li>First version to be available on web-stores! (Chrome & Firefox)</li>
+                    <li>Fixed <a href="https://github.com/ktg5/PlayerTube/issues/1">#1 -- "Rewrite Settings Menu"</a></li>
+                    <li>Fixed some issues with the Firefox build.</li>
+                    <li>Fixed styling.</li>
 
-                <br>
+                    <br>
 
-                As always, if you have any issues,
-                <a href='https://github.com/ktg5/PlayerTube/issues'>please report them on the GitHub page!</a>
+                    As always, if you have any issues,
+                    <a href='https://github.com/ktg5/PlayerTube/issues'>please report them on the GitHub page!</a>
+                    <br>
+                    Enjoy!
+                </div>
                 <br>
-                Enjoy!
+                <br>
+                <h3>Past versions...</h3>
+                <div class="v1">
+                    <div style="font-weight: 600;">v1.0</div>
+                    <li>This is the first version for the PlayerTube extension!</li>
+                    <li>Fixed <a href="https://github.com/ktg5/YT-HTML5-Player/issues/23">#23</a>, since all images are local.</li>
+                    <li>Fixed styling.</li>
+
+                    <br>
+
+                    As always, if you have any issues,
+                    <a href='https://github.com/ktg5/PlayerTube/issues'>please report them on the GitHub page!</a>
+                    <br>
+                    Enjoy!
+                </div>
             </div>
 
             <div id="credits">
