Fix #2 & settings not working (v1.2)
Also the setup script won't run on all sites now.

--- a/html/release-note.html
+++ b/html/release-note.html
@@ -13,9 +13,18 @@
             </div>
 
             <div class="text">
-                <div class="v1dot1">
+                <div class="v1dot2">
                     <h2 class="showVersion">PlayerTube has been updated to </h2>
-                    <li>First version to be available on web-stores! (Chrome & Firefox)</li>
+                    <li>Extension is accepted on Firefox.</li>
+                    <li>Fixed <a href="https://github.com/ktg5/PlayerTube/issues/2">#2 -- "<kbd>moveElement</kbd> function slowing everything down"</a></li>
+                    <li>Fixed an issue in the settings popup where settings won't load. -- This was solved by making the popup's script make a new config if the user doesn't have one already.</li>
+                </div>
+                <br>
+                <br>
+                <h3>Past versions...</h3>
+                <div class="v1dot1">
+                    <div style="font-weight: 600;">v1.1</div>
+                    <li>First version to be uploaded on web-stores! (Chrome & Firefox)</li>
                     <li>Fixed <a href="https://github.com/ktg5/PlayerTube/issues/1">#1 -- "Rewrite Settings Menu"</a></li>
                     <li>Fixed some issues with the Firefox build.</li>
                     <li>Fixed styling.</li>
@@ -28,8 +37,6 @@
                     Enjoy!
                 </div>
                 <br>
-                <br>
-                <h3>Past versions...</h3>
                 <div class="v1">
                     <div style="font-weight: 600;">v1.0</div>
                     <li>This is the first version for the PlayerTube extension!</li>
