--- a/html/release-note.html
+++ b/html/release-note.html
@@ -13,15 +13,20 @@
             </div>
 
             <div class="text">
-                <div class="v1dot2">
+                <div class="v1dot2dot1">
                     <h2 class="showVersion">PlayerTube has been updated to </h2>
+                    <li>Fixed <a href="https://github.com/ktg5/PlayerTube/issues/3">#3 -- "Extension doesn't work on embeds"</a></li>
+                </div>
+                <br>
+                <br>
+                <h3>Past versions...</h3>
+                <div class="v1dot2">
+                    <div style="font-weight: 600;">v1.2</div>
                     <li>Extension is accepted on Firefox.</li>
                     <li>Fixed <a href="https://github.com/ktg5/PlayerTube/issues/2">#2 -- "<kbd>moveElement</kbd> function slowing everything down"</a></li>
                     <li>Fixed an issue in the settings popup where settings won't load. -- This was solved by making the popup's script make a new config if the user doesn't have one already.</li>
                 </div>
                 <br>
-                <br>
-                <h3>Past versions...</h3>
                 <div class="v1dot1">
                     <div style="font-weight: 600;">v1.1</div>
                     <li>First version to be uploaded on web-stores! (Chrome & Firefox)</li>
