everything is gettin' better (v1.3)
We're on the Chrome web-store now btw!!!

* Fixed an Firefox issue with 2010 theme.
* Fixed 3rd-party CSS not loading on 2012 & 2010 themes.
* Added a toggle for the "Heat Map" ontop of the progress bar. (Aka the transparent hills that shows you the most replayed moments in the current video)
* Improved the text area for the user's config.
* Better color picker for custom theme settings.

--- a/html/release-note.html
+++ b/html/release-note.html
@@ -13,13 +13,31 @@
             </div>
 
             <div class="text">
-                <div class="v1dot2dot1">
+                <div class="v1dot3">
                     <h2 class="showVersion">PlayerTube has been updated to </h2>
-                    <li>Fixed <a href="https://github.com/ktg5/PlayerTube/issues/3">#3 -- "Extension doesn't work on embeds"</a></li>
+                    <li>Fixed an Firefox issue with 2010 theme.</li>
+                    <li>Fixed 3rd-party CSS not loading on 2012 & 2010 themes.</li>
+                    <li>Added a toggle for the "Heat Map" ontop of the progress bar. (Aka the transparent hills that shows you the most replayed moments in the current video)</li>
+                    <li>Improved the text area for the user's config.</li>
+                    <li>Better color picker for custom theme settings.</li>
+                    We're also on the Chrome web-store now!!!
                 </div>
+
+                <br>
+
+                As always, if you have any issues,
+                <a href='https://github.com/ktg5/PlayerTube/issues'>please report them on the GitHub page!</a>
+                <br>
+                Enjoy!
+
                 <br>
                 <br>
                 <h3>Past versions...</h3>
+                <div class="v1dot2dot1">
+                    <div style="font-weight: 600;">v1.2.1</div>
+                    <li>Fixed <a href="https://github.com/ktg5/PlayerTube/issues/3">#3 -- "Extension doesn't work on embeds"</a></li>
+                </div>
+                <br>
                 <div class="v1dot2">
                     <div style="font-weight: 600;">v1.2</div>
                     <li>Extension is accepted on Firefox.</li>
@@ -33,13 +51,6 @@
                     <li>Fixed <a href="https://github.com/ktg5/PlayerTube/issues/1">#1 -- "Rewrite Settings Menu"</a></li>
                     <li>Fixed some issues with the Firefox build.</li>
                     <li>Fixed styling.</li>
-
-                    <br>
-
-                    As always, if you have any issues,
-                    <a href='https://github.com/ktg5/PlayerTube/issues'>please report them on the GitHub page!</a>
-                    <br>
-                    Enjoy!
                 </div>
                 <br>
                 <div class="v1">
@@ -47,13 +58,6 @@
                     <li>This is the first version for the PlayerTube extension!</li>
                     <li>Fixed <a href="https://github.com/ktg5/YT-HTML5-Player/issues/23">#23</a>, since all images are local.</li>
                     <li>Fixed styling.</li>
-
-                    <br>
-
-                    As always, if you have any issues,
-                    <a href='https://github.com/ktg5/PlayerTube/issues'>please report them on the GitHub page!</a>
-                    <br>
-                    Enjoy!
                 </div>
             </div>
 
