--- a/html/popup.html
+++ b/html/popup.html
@@ -2,11 +2,7 @@
     <head>
         <link rel="stylesheet" type="text/css" href="popup.css">
         <script src="popup.js"></script>
-        <script src="../def_config.js"></script>
+        <link rel="stylesheet" href="coloris/src/coloris.css"/>
+        <script src="coloris/src/coloris.js"></script>
     </head>
-
-
-    <body>
-        <div id="content"></div>
-    </body>
 </html>
