fix #5 & a bunch of other stuffs

--- a/html/install.html
+++ b/html/install.html
@@ -14,7 +14,9 @@
 
             <div class="text">
                 <h2>Yo! What's good!</h2>
-                Thanks for installing PlayerTube!
+                Thanks for installing PlayerTube! One of my first browser extensions &
+                one of the best additions to the look & feel of YouTube! (In my best
+                and 100% accurate opinion)
                 <br>
                 <br>
                 This extension is basically the continuation of my userscript,
@@ -22,14 +24,15 @@
                 <br>
                 The reason I made the script into a extension is because it's easier to
                 install & manage, more people could find the script, no need for
-                userscript extension like Tampermonkey, plus synced settings across
+                userscript extensions like Tampermonkey, plus synced settings across
                 devices connected to the same account on your browser.
                 <br>
                 <br>
-                If you possibly step upon an issue, such as an issue with the styling,
-                slower performice, something conflicting another YouTube extension,
+                If you possibly step upon an issue such as something with the styling,
+                slower performance, something conflicting with another YouTube extension,
                 or whatever you think seems off,
-                <a href='https://github.com/ktg5/PlayerTube/issues'>feel free to report them on the GitHub page!</a>
+                <a href='https://github.com/ktg5/PlayerTube/issues'>
+                feel free to report them on the GitHub page!</a>
                 <br>
                 <br>
                 Thanks and have the most awesome of awesome days!
