--- a/html/release-note.html
+++ b/html/release-note.html
@@ -13,14 +13,12 @@
             </div>
 
             <div class="text">
-                <div class="v1dot3">
+                <div class="v1dot3dot1">
                     <h2 class="showVersion">PlayerTube has been updated to </h2>
-                    <li>Fixed an Firefox issue with 2010 theme.</li>
-                    <li>Fixed 3rd-party CSS not loading on 2012 & 2010 themes.</li>
-                    <li>Added a toggle for the "Heat Map" ontop of the progress bar. (Aka the transparent hills that shows you the most replayed moments in the current video)</li>
-                    <li>Improved the text area for the user's config.</li>
-                    <li>Better color picker for custom theme settings.</li>
-                    We're also on the Chrome web-store now!!!
+                    <li>Fixed <a href="https://github.com/ktg5/PlayerTube/issues/5">#5 -- "CustomTube's Custom Player Size Bug"</a></li>
+                    <li>Fixed scaling issues with the Timed Markers.</li>
+                    <li>Fixed a good amount of spelling mistakes... (Oops)</li>
+                    <li>Added onto the GitHub issue templates & ReadMe file.</li>
                 </div>
 
                 <br>
@@ -32,7 +30,21 @@
 
                 <br>
                 <br>
+                <br>
+                <br>
+                <br>
+
                 <h3>Past versions...</h3>
+                <div class="v1dot3">
+                    <div style="font-weight: 600;">v1.3</div>
+                    <li>Fixed an Firefox issue with 2010 theme.</li>
+                    <li>Fixed 3rd-party CSS not loading on 2012 & 2010 themes.</li>
+                    <li>Added a toggle for the "Heat Map" ontop of the progress bar. (Aka the transparent hills that shows you the most replayed moments in the current video)</li>
+                    <li>Improved the text area for the user's config.</li>
+                    <li>Better color picker for custom theme settings.</li>
+                    We're also on the Chrome web-store now!!!
+                </div>
+                <br>
                 <div class="v1dot2dot1">
                     <div style="font-weight: 600;">v1.2.1</div>
                     <li>Fixed <a href="https://github.com/ktg5/PlayerTube/issues/3">#3 -- "Extension doesn't work on embeds"</a></li>
