might want to add onto this later but v1.4

--- a/html/install.html
+++ b/html/install.html
@@ -27,6 +27,15 @@
                 userscript extensions like Tampermonkey, plus synced settings across
                 devices connected to the same account on your browser.
                 <br>
+                <h3>For those running CustomTube:</h3>
+                <p>
+                    If by any chance you encounter issues when it comes to the look and
+                    feel of the YouTube player with PlayerTube & CustomTube enabled,
+                    please make sure to set "Use current player" in the "Watch Page"
+                    tab in the CustomTube settings.
+                </p>
+                <img src="../img/customtube-settings.png" style="display: block;margin: auto;" alt="Go to the 'Watch Page' tab in CustomTube's settings, scroll down to 'Video Player Style' and set it to 'Use current player'.">
+                <br>
                 <br>
                 If you possibly step upon an issue such as something with the styling,
                 slower performance, something conflicting with another YouTube extension,
