--- a/html/release-note.html
+++ b/html/release-note.html
@@ -13,12 +13,21 @@
             </div>
 
             <div class="text">
-                <div class="v1dot3dot1">
+                <div class="v1dot4">
+                    <h2>Important notice for those running CustomTube!</h2>
+                    <p>
+                        If by any chance you encounter issues when it comes to the look and
+                        feel of the YouTube player with PlayerTube & CustomTube enabled,
+                        please make sure to set "Use current player" in the "Watch Page"
+                        tab in the CustomTube settings.
+                    </p>
+                    <img src="../img/customtube-settings.png" style="display: block;margin: auto;" alt="Go to the 'Watch Page' tab in CustomTube's settings, scroll down to 'Video Player Style' and set it to 'Use current player'.">
                     <h2 class="showVersion">PlayerTube has been updated to </h2>
-                    <li>Fixed <a href="https://github.com/ktg5/PlayerTube/issues/5">#5 -- "CustomTube's Custom Player Size Bug"</a></li>
-                    <li>Fixed scaling issues with the Timed Markers.</li>
-                    <li>Fixed a good amount of spelling mistakes... (Oops)</li>
-                    <li>Added onto the GitHub issue templates & ReadMe file.</li>
+                    <li>Added Dark Mode for the 2010 theme!</li>
+                    <li>Added the ability to change the background color of the Progress Bar from the custom theme settings.</li>
+                    <li>Added the ability to toggle a YouTube channel's watermark that displays at the bottom right of YouTube videos.</li>
+                    <li>Fixed issues with SponsorBlock & CustomTube extensions.</li>
+                    <li>Fixed other issues & bugs.</li>
                 </div>
 
                 <br>
@@ -35,6 +44,14 @@
                 <br>
 
                 <h3>Past versions...</h3>
+                <div class="v1dot3dot1">
+                    <div style="font-weight: 600;">v1.3.1</div>
+                    <li>Fixed <a href="https://github.com/ktg5/PlayerTube/issues/5">#5 -- "CustomTube's Custom Player Size Bug"</a></li>
+                    <li>Fixed scaling issues with the Timed Markers.</li>
+                    <li>Fixed a good amount of spelling mistakes... (Oops)</li>
+                    <li>Added onto the GitHub issue templates & ReadMe file.</li>
+                </div>
+                <br>
                 <div class="v1dot3">
                     <div style="font-weight: 600;">v1.3</div>
                     <li>Fixed an Firefox issue with 2010 theme.</li>
