fixe stuff & adde stuff lol
no "d" key gaming
* heat map toggle is set to false by default now
* custom theme stuff
* 3rd-party fixes
* rounded corners? get them outta here!

--- a/html/release-note.html
+++ b/html/release-note.html
@@ -25,8 +25,10 @@
                     <h2 class="showVersion">PlayerTube has been updated to </h2>
                     <li>Added Dark Mode for the 2010 theme!</li>
                     <li>Added the ability to change the background color of the Progress Bar from the custom theme settings.</li>
+                    <li>Added the ability to change the background color of the player's settings.</li>
                     <li>Added the ability to toggle a YouTube channel's watermark that displays at the bottom right of YouTube videos.</li>
-                    <li>Fixed issues with SponsorBlock & CustomTube extensions.</li>
+                    <li>Added the ability to toggle the rounded edges around the video player</li>
+                    <li>Fixed issues with SponsorBlock, CustomTube, & YouTube Redux.</li>
                     <li>Fixed other issues & bugs.</li>
                 </div>
 
