still needs some work when i get back -- saving this for now (v1.4.1)

--- a/html/release-note.html
+++ b/html/release-note.html
@@ -13,7 +13,7 @@
             </div>
 
             <div class="text">
-                <div class="v1dot4">
+                <div class="v1dot4dot1">
                     <h2>Important notice for those running CustomTube!</h2>
                     <p>
                         If by any chance you encounter issues when it comes to the look and
@@ -23,13 +23,14 @@
                     </p>
                     <img src="../img/customtube-settings.png" style="display: block;margin: auto;" alt="Go to the 'Watch Page' tab in CustomTube's settings, scroll down to 'Video Player Style' and set it to 'Use current player'.">
                     <h2 class="showVersion">PlayerTube has been updated to </h2>
-                    <li>Added Dark Mode for the 2010 theme!</li>
-                    <li>Added the ability to change the background color of the Progress Bar from the custom theme settings.</li>
-                    <li>Added the ability to change the background color of the player's settings.</li>
-                    <li>Added the ability to toggle a YouTube channel's watermark that displays at the bottom right of YouTube videos.</li>
-                    <li>Added the ability to toggle the rounded edges around the video player</li>
-                    <li>Fixed issues with SponsorBlock, CustomTube, & YouTube Redux.</li>
-                    <li>Fixed other issues & bugs.</li>
+                    <li>Added the ability to toggle the Paid Content popups on videos</li>
+                    <li>Added the ability to toggle Info Cards</li>
+                    <li>Added the ability to fully extend the progress bar</li>
+                    <li>Added the ability to toggle the fade in & out animation instead of moving the controls down</li>
+                    <li>Fixed some link issues with 2012 & 2015</li>
+                    <li>Improved on 2010's top buttons</li>
+                    <li>(This was added in 1.4 but) When a feature is not in someone's config, the toggle button will flash orange.</li>
+                    <li></li>
                 </div>
 
                 <br>
@@ -46,6 +47,16 @@
                 <br>
 
                 <h3>Past versions...</h3>
+                <div class="v1dot4">
+                    <div style="font-weight: 600;">v1.4</div>
+                    <li>Added Dark Mode for the 2010 theme!</li>
+                    <li>Added the ability to change the background color of the Progress Bar from the custom theme settings.</li>
+                    <li>Added the ability to change the background color of the player's settings.</li>
+                    <li>Added the ability to toggle a YouTube channel's watermark that displays at the bottom right of YouTube videos.</li>
+                    <li>Added the ability to toggle the rounded edges around the video player</li>
+                    <li>Fixed issues with SponsorBlock, CustomTube, & YouTube Redux.</li>
+                    <li>Fixed other issues & bugs.</li>
+                </div>
                 <div class="v1dot3dot1">
                     <div style="font-weight: 600;">v1.3.1</div>
                     <li>Fixed <a href="https://github.com/ktg5/PlayerTube/issues/5">#5 -- "CustomTube's Custom Player Size Bug"</a></li>
