added links in settings, 2010 changes & fixed bugs (v1.5 aka v1.4.1)

--- a/html/release-note.html
+++ b/html/release-note.html
@@ -13,7 +13,7 @@
             </div>
 
             <div class="text">
-                <div class="v1dot4dot1">
+                <div class="v1dot5">
                     <h2>Important notice for those running CustomTube!</h2>
                     <p>
                         If by any chance you encounter issues when it comes to the look and
@@ -23,14 +23,15 @@
                     </p>
                     <img src="../img/customtube-settings.png" style="display: block;margin: auto;" alt="Go to the 'Watch Page' tab in CustomTube's settings, scroll down to 'Video Player Style' and set it to 'Use current player'.">
                     <h2 class="showVersion">PlayerTube has been updated to </h2>
+                    <li><b>2010 now does not fully extend the progress bar by default. This can be re-enabled by using one of the new settings under, "Fully extend the Progress Bar's height at all times"</b></li>
+                    <li>In the extension popup, some opinions have links to information about what the setting will target.</li>
+                    <li>Fixed some link & embed issues with 2012 & 2015</li>
+                    <li>Improved on 2010's top buttons</li>
                     <li>Added the ability to toggle the Paid Content popups on videos</li>
                     <li>Added the ability to toggle Info Cards</li>
                     <li>Added the ability to fully extend the progress bar</li>
                     <li>Added the ability to toggle the fade in & out animation instead of moving the controls down</li>
-                    <li>Fixed some link issues with 2012 & 2015</li>
-                    <li>Improved on 2010's top buttons</li>
                     <li>(This was added in 1.4 but) When a feature is not in someone's config, the toggle button will flash orange.</li>
-                    <li></li>
                 </div>
 
                 <br>
