possibly fixed update page not showing?

--- a/html/install.html
+++ b/html/install.html
@@ -2,6 +2,10 @@
     <head>
         <link rel="stylesheet" type="text/css" href="base.css">
         <script src="base.js"></script>
+        <title>PlayerTube : Welcome!</title>
+        <link rel="shortcut icon" type="image/png" href="../img/playertube/icon.png">
+
+        <div id="page-name" style="display: none;">Welcome!</div>
     </head>
 
 
