--- a/html/update.html
+++ b/html/update.html
@@ -2,6 +2,10 @@
     <head>
         <link rel="stylesheet" type="text/css" href="base.css">
         <script src="base.js"></script>
+        <title>PlayerTube : Update Log</title>
+        <link rel="shortcut icon" type="image/png" href="../img/playertube/icon.png">
+
+        <div id="page-name" style="display: none;">Update Log</div>
     </head>
 
 
@@ -18,20 +22,29 @@
                     <p>
                         If by any chance you encounter issues when it comes to the look and
                         feel of the YouTube player with PlayerTube & CustomTube enabled,
-                        please make sure to set "Use current player" in the "Watch Page"
-                        tab in the CustomTube settings.
+                        <b>
+                            please make sure to set "Use current player" in the "Watch Page"
+                            tab in the CustomTube settings.
+                        </b>
                     </p>
                     <img src="../img/customtube-settings.png" style="display: block;margin: auto;" alt="Go to the 'Watch Page' tab in CustomTube's settings, scroll down to 'Video Player Style' and set it to 'Use current player'.">
+                    <p>
+                        This alert will be removed sometime soon but will be accessable to
+                        new users.
+                    </p>
+
+
                     <h2 class="showVersion">PlayerTube has been updated to </h2>
                     <li><b>2010 now does not fully extend the progress bar by default. This can be re-enabled by using one of the new settings under, "Fully extend the Progress Bar's height at all times"</b></li>
+                    <li>Possibly fixed extension pages to actually show?</li>
                     <li>In the extension popup, some opinions have links to information about what the setting will target.</li>
                     <li>Fixed some link & embed issues with 2012 & 2015</li>
                     <li>Improved on 2010's top buttons</li>
-                    <li>Added the ability to toggle the Paid Content popups on videos</li>
-                    <li>Added the ability to toggle Info Cards</li>
-                    <li>Added the ability to fully extend the progress bar</li>
-                    <li>Added the ability to toggle the fade in & out animation instead of moving the controls down</li>
-                    <li>(This was added in 1.4 but) When a feature is not in someone's config, the toggle button will flash orange.</li>
+                    <li>Added the ability to toggle the Paid Content popups on videos (Disabled by default)</li>
+                    <li>Added the ability to toggle Info Cards (Enabled by default)</li>
+                    <li>Added the ability to fully extend the progress bar (Disabled by default)</li>
+                    <li>Added the ability to toggle the fade in & out animation instead of moving the controls down (Disabled by default)</li>
+                    <li>(This was added in 1.4 but) When a feature is not in the user's config, the toggle button will flash orange.</li>
                 </div>
 
                 <br>
