--- a/html/update.html
+++ b/html/update.html
@@ -17,7 +17,7 @@
             </div>
 
             <div class="text">
-                <div class="v1dot5">
+                <div class="v1dot5dot1">
                     <h2>Important notice for those running CustomTube!</h2>
                     <p>
                         If by any chance you encounter issues when it comes to the look and
@@ -35,16 +35,11 @@
 
 
                     <h2 class="showVersion">PlayerTube has been updated to </h2>
-                    <li><b>2010 now does not fully extend the progress bar by default. This can be re-enabled by using one of the new settings under, "Fully extend the Progress Bar's height at all times"</b></li>
-                    <li>Possibly fixed extension pages to actually show?</li>
-                    <li>In the extension popup, some opinions have links to information about what the setting will target.</li>
-                    <li>Fixed some link & embed issues with 2012 & 2015</li>
-                    <li>Improved on 2010's top buttons</li>
-                    <li>Added the ability to toggle the Paid Content popups on videos (Disabled by default)</li>
-                    <li>Added the ability to toggle Info Cards (Enabled by default)</li>
-                    <li>Added the ability to fully extend the progress bar (Disabled by default)</li>
-                    <li>Added the ability to toggle the fade in & out animation instead of moving the controls down (Disabled by default)</li>
-                    <li>(This was added in 1.4 but) When a feature is not in the user's config, the toggle button will flash orange.</li>
+                    somewhat a big minor update lol
+                    <li>Fixed an issue with 2010 theme, where a Progress Bar with chapters would enlarge the chapter & fixed some of it's Custom Theme code.</li>
+                    <li>Add user request -- <a href="https://github.com/ktg5/PlayerTube/issues/9">#9 - "Progress Bar keeps fading out with 'Fully extend the Progress Bar' enabled"</a></li>
+                    <li><b>FINALLY fixed <a href="https://github.com/ktg5/PlayerTube/issues/6">#6 - "Progress Bar not moving when video is playing"</a> by getting raw video stats</b></li>
+                    <li>Also there's some cool console log styling :O</li>
                 </div>
 
                 <br>
@@ -61,6 +56,20 @@
                 <br>
 
                 <h3>Past versions...</h3>
+                <div class="v1dot5">
+                    <div style="font-weight: 600;">v1.5</div>
+                    <li><b>2010 now does not fully extend the progress bar by default. This can be re-enabled by using one of the new settings under, "Fully extend the Progress Bar's height at all times"</b></li>
+                    <li>Possibly fixed extension pages to actually show?</li>
+                    <li>In the extension popup, some opinions have links to information about what the setting will target.</li>
+                    <li>Fixed some link & embed issues with 2012 & 2015</li>
+                    <li>Improved on 2010's top buttons</li>
+                    <li>Added the ability to toggle the Paid Content popups on videos (Disabled by default)</li>
+                    <li>Added the ability to toggle Info Cards (Enabled by default)</li>
+                    <li>Added the ability to fully extend the progress bar (Disabled by default)</li>
+                    <li>Added the ability to toggle the fade in & out animation instead of moving the controls down (Disabled by default)</li>
+                    <li>(This was added in 1.4 but) When a feature is not in the user's config, the toggle button will flash orange.</li>
+                </div>
+                <br>
                 <div class="v1dot4">
                     <div style="font-weight: 600;">v1.4</div>
                     <li>Added Dark Mode for the 2010 theme!</li>
@@ -71,6 +80,7 @@
                     <li>Fixed issues with SponsorBlock, CustomTube, & YouTube Redux.</li>
                     <li>Fixed other issues & bugs.</li>
                 </div>
+                <br>
                 <div class="v1dot3dot1">
                     <div style="font-weight: 600;">v1.3.1</div>
                     <li>Fixed <a href="https://github.com/ktg5/PlayerTube/issues/5">#5 -- "CustomTube's Custom Player Size Bug"</a></li>
