--- a/html/update.html
+++ b/html/update.html
@@ -17,29 +17,10 @@
             </div>
 
             <div class="text">
-                <div class="v1dot5dot1">
-                    <h2>Important notice for those running CustomTube!</h2>
-                    <p>
-                        If by any chance you encounter issues when it comes to the look and
-                        feel of the YouTube player with PlayerTube & CustomTube enabled,
-                        <b>
-                            please make sure to set "Use current player" in the "Watch Page"
-                            tab in the CustomTube settings.
-                        </b>
-                    </p>
-                    <img src="../img/customtube-settings.png" style="display: block;margin: auto;" alt="Go to the 'Watch Page' tab in CustomTube's settings, scroll down to 'Video Player Style' and set it to 'Use current player'.">
-                    <p>
-                        This alert will be removed sometime soon but will be accessable to
-                        new users.
-                    </p>
-
-
+                <div class="v1dot5dot2">
                     <h2 class="showVersion">PlayerTube has been updated to </h2>
-                    somewhat a big minor update lol
-                    <li>Fixed an issue with 2010 theme, where a Progress Bar with chapters would enlarge the chapter & fixed some of it's Custom Theme code.</li>
-                    <li>Add user request -- <a href="https://github.com/ktg5/PlayerTube/issues/9">#9 - "Progress Bar keeps fading out with 'Fully extend the Progress Bar' enabled"</a></li>
-                    <li><b>FINALLY fixed <a href="https://github.com/ktg5/PlayerTube/issues/6">#6 - "Progress Bar not moving when video is playing"</a> by getting raw video stats</b></li>
-                    <li>Also there's some cool console log styling :O</li>
+                    <li>Added <a href="https://github.com/ktg5/PlayerTube/issues/11">#11 - "Old Loading Spinner"</a></li>
+                    <li>Added <a href="https://github.com/ktg5/PlayerTube/issues/10">#10 - "Add Embed Play Button"</a></li>
                 </div>
 
                 <br>
@@ -56,6 +37,15 @@
                 <br>
 
                 <h3>Past versions...</h3>
+                <div class="v1dot5dot1">
+                    <div style="font-weight: 600;">v1.5.1</div>
+                    somewhat a big minor update lol
+                    <li>Fixed an issue with 2010 theme, where a Progress Bar with chapters would enlarge the chapter & fixed some of it's Custom Theme code.</li>
+                    <li>Add user request -- <a href="https://github.com/ktg5/PlayerTube/issues/9">#9 - "Progress Bar keeps fading out with 'Fully extend the Progress Bar' enabled"</a></li>
+                    <li><b>FINALLY fixed <a href="https://github.com/ktg5/PlayerTube/issues/6">#6 - "Progress Bar not moving when video is playing"</a> by getting raw video stats</b></li>
+                    <li>Also there's some cool console log styling :O</li>
+                </div>
+                <br>
                 <div class="v1dot5">
                     <div style="font-weight: 600;">v1.5</div>
                     <li><b>2010 now does not fully extend the progress bar by default. This can be re-enabled by using one of the new settings under, "Fully extend the Progress Bar's height at all times"</b></li>
