--- a/html/update.html
+++ b/html/update.html
@@ -17,10 +17,31 @@
             </div>
 
             <div class="text">
-                <div class="v1dot5dot2">
+                <div class="customtube-warning">
+                    <h2 class="important">&#9888 Yet again another notice for CustomTube users! &#9888</h2>
+                    <i>Long-time users may remember a message similar to this, but there's different settings to change now!</i>
+                    <br>
+                    With the introduction of PlayerTube v1.6, there are new settings users need to change if they use CustomTube.
+                    <br>
+                    <b>If you use CustomTube, please open up it's settings and make sure to set the current settings that are listed below!</b>
+                    <img src="../img/customtube-settings.png" style=" display: block;padding: 1rem;margin: auto;">
+                    <br>
+                    As seen in the screenshot, please go to the "Watch Page" tab in CustomTube's settings, uncheck "Use Custom Player Size"
+                    in the "Video Player Size" selection.
+                    <br>
+                    And just to be sure you're 100% good, use the "Use current player" option under the "Video Player Style".
+                    <br>
+                    <br>
+                    The reason these settings should be changed is due to PlayerTube's new scripts for the YouTube Progress Bar,
+                    which allow the Progress Bar to fully extend out with the current video size.
+                    <br>
+                    <br>
+                    That's all for now, release notes are below!
+                </div>
+                <div class="v1dot6">
                     <h2 class="showVersion">PlayerTube has been updated to </h2>
-                    <li>Added <a href="https://github.com/ktg5/PlayerTube/issues/11">#11 - "Old Loading Spinner"</a></li>
-                    <li>Added <a href="https://github.com/ktg5/PlayerTube/issues/10">#10 - "Add Embed Play Button"</a></li>
+                    <li><b>Addition to the long-time issue of the Progress Bar not fully extending.</b> While not fully fixed, it's better</li>
+                    <li>Also finally fixed the long-time issue of PlayerTube's scripts running multiple times.</li>
                 </div>
 
                 <br>
@@ -37,6 +58,12 @@
                 <br>
 
                 <h3>Past versions...</h3>
+                <div class="v1dot5dot2">
+                    <div style="font-weight: 600;">v1.5.2</div>
+                    <li>Added <a href="https://github.com/ktg5/PlayerTube/issues/11">#11 - "Old Loading Spinner"</a></li>
+                    <li>Added <a href="https://github.com/ktg5/PlayerTube/issues/10">#10 - "Add Embed Play Button"</a></li>
+                </div>
+                <br>
                 <div class="v1dot5dot1">
                     <div style="font-weight: 600;">v1.5.1</div>
                     somewhat a big minor update lol
