Forgot about this -- update year names
They're more accurate lol

--- a/html/update.html
+++ b/html/update.html
@@ -40,7 +40,8 @@
                 </div>
                 <div class="v1dot6">
                     <h2 class="showVersion">PlayerTube has been updated to </h2>
-                    <li><b>Addition to the long-time issue of the Progress Bar not fully extending.</b> While not fully fixed, it's better</li>
+                    <b>NOTE: Year names have changed -- <i>2012</i> is now <i>2011</i> and <i>2015</i> is now <i>2012</i>.</b>
+                    <li><b>Addition to the long-time issue of the Progress Bar not fully extending.</b> Currently the new fix doesn't work in embed & fullscreen, it's better than before. Old fix is used instead for those modes.</li>
                     <li>Also finally fixed the long-time issue of PlayerTube's scripts running multiple times.</li>
                 </div>
 
@@ -78,7 +79,7 @@
                     <li><b>2010 now does not fully extend the progress bar by default. This can be re-enabled by using one of the new settings under, "Fully extend the Progress Bar's height at all times"</b></li>
                     <li>Possibly fixed extension pages to actually show?</li>
                     <li>In the extension popup, some opinions have links to information about what the setting will target.</li>
-                    <li>Fixed some link & embed issues with 2012 & 2015</li>
+                    <li>Fixed some link & embed issues with 2011 & 2012</li>
                     <li>Improved on 2010's top buttons</li>
                     <li>Added the ability to toggle the Paid Content popups on videos (Disabled by default)</li>
                     <li>Added the ability to toggle Info Cards (Enabled by default)</li>
@@ -109,7 +110,7 @@
                 <div class="v1dot3">
                     <div style="font-weight: 600;">v1.3</div>
                     <li>Fixed an Firefox issue with 2010 theme.</li>
-                    <li>Fixed 3rd-party CSS not loading on 2012 & 2010 themes.</li>
+                    <li>Fixed 3rd-party CSS not loading on 2011 & 2010 themes.</li>
                     <li>Added a toggle for the "Heat Map" ontop of the progress bar. (Aka the transparent hills that shows you the most replayed moments in the current video)</li>
                     <li>Improved the text area for the user's config.</li>
                     <li>Better color picker for custom theme settings.</li>
